--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -1,5 +1,6 @@
 {
-    "editor.fontSize": 15,
+    "terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\wsl.exe",
+    //"editor.fontSize": 15,
     "telemetry.enableTelemetry": false,
     "gitlens.currentLine.enabled": false,
     "gitlens.hovers.currentLine.over": "line",
