--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\wsl.exe",
+    "terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\bash.exe",
     //"editor.fontSize": 15,
     "telemetry.enableTelemetry": false,
     "gitlens.currentLine.enabled": false,
